flatpak: Get the version from the appstream file we are fed

flatpak_installed_ref_get_appdata_version will give us the installed
version.

BUG: 448521